Fix JAVA_OPTS